# crass

./: .gitmodules  AUTHORS  COPYING  ChangeLog  Dockerfile  FAQ.html  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  Tutorial.html  aclocal.m4  config.guess  config.h  config.h.in  config.rpath  config.status  configure  configure.ac  crass-assembler1.html  crass1.html  crazy.fa  force.html  index.html  news.html
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
css/: bootstrap.css
data/ERR022075/: Clean_4_GAGTTCCCCGCGCCAGCGGGGATAAACCG_debug.gv  Clean_5_GTGTTCCCCGCGCCAGCGGGGATAAACCG_debug.gv
doc/: Makefile.am  crispr_spec.tex  manual.tex
m4/: ax_lib_xerces.m4  ax_libcrispr.m4  ax_xercesc.m4  gettext.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4
man/: Makefile  Makefile.am  Makefile.in  crass-assembler.1  crass.1  crisprtools.1
resources/: crass.dtd  sdl.ps
scripts/: batch_crass.sh
src/: .gitignore  AssemblyWrapper.cpp  AssemblyWrapper.h  Bitap.cpp  CrassXML.cpp  CrassXML.h  Crispr.cpp  Crispr.h  CrisprNode.cpp  CrisprNode.h  Fastx.cpp  Fastx.h  Genome.cpp  Genome.h  GenomeFinder.cpp  GenomeFinder.h  GraphDrawingDefines.h  Levensthein.cpp  Levensthein.h  LoggerSimp.cpp  LoggerSimp.h  Makefile  Makefile.am  Makefile.in  NodeManager.cpp  NodeManager.h  PatternMatcher.cpp  PatternMatcher.h  Rainbow.cpp  Rainbow.h  ReadHolder.cpp  ReadHolder.h  SeqUtils.cpp  SeqUtils.h  SmithWaterman.cpp  SmithWaterman.h  SpacerInstance.cpp  SpacerInstance.h  StatsManager.h  StlExt.h  (+16 more)
src/.deps/: Bitap.Po  CrisprNode.Po  Levensthein.Po  LoggerSimp.Po  NodeManager.Po  ReadHolder.Po  SeqUtils.Po  SmithWaterman.Po  SpacerInstance.Po  WorkHorse.Po  WuManber.Po  bm.Po  crass.Po  libcrispr.Po  mcd.Po
src/aho-corasick/: Makefile.am
src/crass/: Aligner.cpp  Aligner.h  AssemblyWrapper.cpp  AssemblyWrapper.h  CrassException.h  CrisprGraph.cpp  CrisprGraph.h  CrisprNode.cpp  CrisprNode.h  DRArray.cpp  DRArray.h  DeBruijn.cpp  DeBruijn.h  DrawTool.cpp  DrawTool.h  Exception.h  ExtractTool.cpp  ExtractTool.h  FilterTool.cpp  FilterTool.h  Graph.cpp  Graph.h  GraphDrawingDefines.h  LoggerSimp.cpp  LoggerSimp.h  Makefile.am  MergeTool.cpp  MergeTool.h  NodeManager.cpp  NodeManager.h  PatternMatcher.cpp  Rainbow.h  ReadHolder.cpp  ReadHolder.h  RemoveTool.cpp  RemoveTool.h  RepeatArray.cpp  RepeatArray.h  SanitiseTool.cpp  SanitiseTool.h  (+52 more)
src/crisprtools/: CrisprGraph.cpp  CrisprGraph.h  DrawTool.cpp  DrawTool.h  ExtractTool.cpp  ExtractTool.h  FilterTool.cpp  FilterTool.h  Makefile.am  MergeTool.cpp  MergeTool.h  Rainbow.h  RemoveTool.cpp  RemoveTool.h  SanitiseTool.cpp  SanitiseTool.h  SplitTool.cpp  StatTool.cpp  StatTool.h  Utils.cpp  Utils.h  main.cpp
src/libcrispr/: Exception.cpp  Exception.h  Makefile.am  StlExt.h  XML.cpp  XML.h  Xml.cpp  Xml.h
src/test/: Makefile.am  test_libcrispr.cpp
