# this lists the binaries to produce, the (non-PHONY, binary) targets in
bin_PROGRAMS = crass


AM_CXXFLAGS = -std=c++0x -pedantic -Wall
AM_LDFLAGS =  @zlib_flags@



crass_SOURCES =\
PatternMatcher.cpp kseq.cpp Search.cpp Sequence.cpp RepeatArray.cpp Storage.cpp main.cpp LoggerSimp.cpp StringCheck.cpp
